<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialogbg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_remove_24"
        android:layout_gravity="center|top"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontar"
            android:layout_marginStart="12dp"
            android:layout_marginTop="1dp"
            android:textStyle="bold"
            android:padding="8dp"
            android:text="@string/menu"
            android:textAlignment="viewStart"
            android:textColor="#99D7F4"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="185dp"
            android:layout_marginTop="6dp"

            android:contentDescription="Cancel"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_clear_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutProfile"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/boy" />

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"

            android:fontFamily="@string/fontar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/profile"
            android:textColor="#99D7F4"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/schedule_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@string/fontar"
            android:text="@string/my_schedule"

            android:textColor="#99D7F4"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutGallary"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/gallery"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@string/fontar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:text="@string/gallery"
            android:textColor="#99D7F4"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/bell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"

            android:layout_marginRight="30dp"
            android:fontFamily="@string/fontar"
            android:text="@string/notifications"

            android:textColor="#99D7F4"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutSettings"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/gear_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:text="@string/settings"
            android:textColor="#99D7F4"
            android:textSize="16sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAbouUs"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/group" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/about_us"
            android:textColor="#99D7F4"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAboutUniv"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/fontar"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:text="@string/about_university"
            android:textColor="#99D7F4"
            android:textSize="16sp" />

    </LinearLayout>




</LinearLayout>
