<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#F5F5F5"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardCornerRadius="12dp"
        android:layout_marginBottom="12dp"
        android:padding="16dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:paddingBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Line 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line1"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line2"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 4 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line4"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 6 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line6"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 9 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line9"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 10 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line10"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 11 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line11"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 12 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line12"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 13 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line13"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

            <!-- Line 14 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="8dp"
                app:cardCornerRadius="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="#FFFFFF">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_line14"
                    android:textColor="#333333"
                    android:textSize="16sp"
                    android:layout_marginBottom="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
